Updated reading list

--- a/views/wiki/libsis.pug
+++ b/views/wiki/libsis.pug
@@ -10,64 +10,68 @@ block content
     <hr>
     h2 Currently Reading
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
-      li <i class="fa fa-book fa-fw" aria-hidden="true"></i> Is That Bike Diesel, Mate? - Paul Carter
-      li <i class="fa fa-book fa-fw" aria-hidden="true"></i> Rotherweird - Andrew Caldecott
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Nine Fox Gambit - Yoon Ha Lee
+      li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
+      li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
+      li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
     <hr>
     h2 To Read
     h3 Non-Fiction
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Superintelligence - Nick Bostrum
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> The Richest Man in Babylon - George S. Clason
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Godforsaken Sea - Derek Lundy
+      li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
+      li <span class='icon-tablet'></span> Godforsaken Sea - Derek Lundy
     h3 Fiction - Sci-Fi
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Citidel 32: A Tale of the Aggrigate - Tom Merrit
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Field One - Simon Winstanley
+      li <span class='icon-tablet'></span> Citidel 32: A Tale of the Aggrigate - Tom Merrit
+      li <span class='icon-tablet'></span> Field One - Simon Winstanley
     h3 Fiction - Fantasy
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Norse Mythology - Neil Gaiman
-      li <i class="fa fa-book fa-fw" aria-hidden="true"></i> Mana Pool - L.J. McLean
+      li <span class='icon-tablet'></span> Norse Mythology - Neil Gaiman
+      li <span class='icon-book'></span> Mana Pool - L.J. McLean
     h3 Graphic Novels
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> SAGA -  <i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Brian K Vaughan , <i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i> Fiona Staples
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Giant Days - <i class="fa fa-pencil fa-fw" aria-hidden="true"></i> John Allison , <i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i> Lissa Treiman 
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Paper Girls - <i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Brian K. Vaughan , <i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i> Cliff Chiang 
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
+      li <span class='icon-tablet'></span> SAGA -   Brian K Vaughan , Fiona Staples
+      li <span class='icon-tablet'></span> Giant Days -  John Allison, Lissa Treiman
+      li <span class='icon-tablet'></span> Paper Girls -  Brian K. Vaughan, Cliff Chiang
     hr
     h2 Read in 2019
-    p Goal || 3/30
+    p Goal || 4/30
+    h4 Fiction - Sci-Fi
+    ul
+      li <span class='icon-headphones'></span> Nine Fox Gambit - Yoon Ha Lee
     h4 Fiction - Fantasy
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> A Wizard of Earthsea - Ursula K. Le Guin
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> On the Shoulders of Titans - Andrew Rowe
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> The Dark Tower VII: The Dark Tower - Stephen King
+      li <span class='icon-tablet'></span> A Wizard of Earthsea - Ursula K. Le Guin
+      li <span class='icon-headphones'></span> On the Shoulders of Titans - Andrew Rowe
+      li <span class='icon-headphones'></span> The Dark Tower VII: The Dark Tower - Stephen King
+    h4 Graphic Novels
+    ul
+      li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
+      li <span class='icon-book'></span> Homunculus - Joe Sparrow
     h2 Read in 2018
     h4 Fiction - Sci-Fi
     ul
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Destiny of Dragons - Jack Campbell
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Infinate - Jeremy Robinson
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> The Singularity Trap - Dennis E. Taylor
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Out of Spite, Out of Mind - Scott Meyer
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Sea of Rust - C. Robert Cargill
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Super Powereds: Year 4 - Drew Hayes
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Neauromancer - William Gibson
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Forever Fanatasy Online - Rachel Aaron
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Awaken Online: Evolution - Travis Bagwell
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Salvation - Peter F. Hamilton
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> The Second Ship - Richard Phillips
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Record of a Spaceborn Few - Becky Chambers
+      li <span class='icon-headphones'></span> Destiny of Dragons - Jack Campbell
+      li <span class='icon-headphones'></span> Infinate - Jeremy Robinson
+      li <span class='icon-headphones'></span> The Singularity Trap - Dennis E. Taylor
+      li <span class='icon-headphones'></span> Out of Spite, Out of Mind - Scott Meyer
+      li <span class='icon-headphones'></span> Sea of Rust - C. Robert Cargill
+      li <span class='icon-headphones'></span> Super Powereds: Year 4 - Drew Hayes
+      li <span class='icon-headphones'></span> Neauromancer - William Gibson
+      li <span class='icon-headphones'></span> Forever Fanatasy Online - Rachel Aaron
+      li <span class='icon-headphones'></span> Awaken Online: Evolution - Travis Bagwell
+      li <span class='icon-headphones'></span> Salvation - Peter F. Hamilton
+      li <span class='icon-headphones'></span> The Second Ship - Richard Phillips
+      li <span class='icon-headphones'></span> Record of a Spaceborn Few - Becky Chambers
     h4 Fiction - Fantasy
     ul
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Dungeon Calamity - Dakota Krout
-      li <i class="fa fa-book fa-fw" aria-hidden="true"></i> RWBY - Miwa Shirow
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Forging Divinity - Andrew Rowe
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Stealing Sorcery - Andrew Rowe
+      li <span class='icon-headphones'></span> Dungeon Calamity - Dakota Krout
+      li <span class='icon-book'></span> RWBY - Miwa Shirow
+      li <span class='icon-headphones'></span> Forging Divinity - Andrew Rowe
+      li <span class='icon-headphones'></span> Stealing Sorcery - Andrew Rowe
     h4 Fiction - General
     ul
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> A Man called Ove - Fredrik Backman
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> After It Happened 5 + 6 - Devon C. Ford
+      li <span class='icon-headphones'></span> A Man called Ove - Fredrik Backman
+      li <span class='icon-headphones'></span> After It Happened 5 + 6 - Devon C. Ford
     h4 Graphic Novels
     ul
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Low: Vol. 1 - <i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Rick Remender, <i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i> Greg Tocchini
+      li <span class='icon-tablet'></span> Low: Vol. 1 -  Rick Remender, Greg Tocchini
