Added wiki page for Alchemist

--- a/views/wiki.pug
+++ b/views/wiki.pug
@@ -7,7 +7,8 @@ block content
         h2 Projects
         <hr>
         ul
-          li(class='wiki-latest-project') Recent | <a href='/wiki/procul'>Procul</a>
+          li(class='wiki-latest-project') Recent | <a href='/wiki/alchemist'>Alchemist</a>
+          li <a href='/wiki/alchemist'>Alchemist</a>
           li <a href='/wiki/humes'>Humes</a>
           li <a href='/wiki/retejo'>Retejo</a>
           li <a href='/wiki/sargas'>Sargas</a>
