Changed a line in alchemist wiki page

--- a/views/wiki/alchemist.pug
+++ b/views/wiki/alchemist.pug
@@ -18,8 +18,7 @@ block content
           span InDev
     div
       h1 Alchemist
-    div
-      code What you give me in time and information, I shall transmute into a personal tome.
+      .under-title Transmute time and code into a personal tome.
     div
       p The Alchemist is a static wiki generator, designed to read data from a collection of flat file databases and produce a folder filled with HTML documents. It watches the library folder for updates and builds itself once there has been no new activity after 10 minutes.
 
