Added proper invert to footer icons

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -400,7 +400,7 @@ footer
     width 25px
     height 25px
     margin-right 5px
-    filter invert()
+    filter invert(1)
     background-size cover
     background-position center center
     display inline-block
