--- a/views/wiki/straal.pug
+++ b/views/wiki/straal.pug
@@ -41,4 +41,8 @@ block content
         li.wiki-item
           img(src='/images/icons/wiki/straal/rigel.svg')
           span.wiki-label Rigel
-          span.wiki-desc Linode VPS
+          span.wiki-desc Linode VPS - London
+        li.wiki-item
+          span(style='font-size:100px; display: block; margin: 20px 20px; line-height: 1em;') 蛇
+          span.wiki-label Serpentis
+          span.wiki-desc Linode VPS - Tokyo
