--- a/views/wiki/libsis.pug
+++ b/views/wiki/libsis.pug
@@ -12,7 +12,7 @@ block content
     ul
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
-      li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
+      li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -21,12 +21,12 @@ block content
       li <span class='icon-tablet'></span> Godforsaken Sea - Derek Lundy
     h3 Fiction - Sci-Fi
     ul
-      li <span class='icon-tablet'></span> Citidel 32: A Tale of the Aggrigate - Tom Merrit
       li <span class='icon-tablet'></span> Field One - Simon Winstanley
     h3 Fiction - Fantasy
     ul
       li <span class='icon-tablet'></span> Norse Mythology - Neil Gaiman
       li <span class='icon-book'></span> Mana Pool - L.J. McLean
+      li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
     h3 Graphic Novels
     ul
       li <span class='icon-tablet'></span> SAGA -   Brian K Vaughan , Fiona Staples
@@ -34,15 +34,18 @@ block content
       li <span class='icon-tablet'></span> Paper Girls -  Brian K. Vaughan, Cliff Chiang
     hr
     h2 Read in 2019
-    p Goal || 4/30
+    h3 Goal >> 9/30
     h4 Fiction - Sci-Fi
     ul
       li <span class='icon-headphones'></span> Nine Fox Gambit - Yoon Ha Lee
+      li <span class='icon-headphones'></span> Rendezvous with Rama - Arthur C. Clarke
+      li <span class='icon-tablet'></span> Citidel 32: A Tale of the Aggrigate - Tom Merrit
     h4 Fiction - Fantasy
     ul
       li <span class='icon-tablet'></span> A Wizard of Earthsea - Ursula K. Le Guin
       li <span class='icon-headphones'></span> On the Shoulders of Titans - Andrew Rowe
       li <span class='icon-headphones'></span> The Dark Tower VII: The Dark Tower - Stephen King
+      li <span class='icon-headphones'></span> How to Stop Time - Matt Haig
     h4 Graphic Novels
     ul
       li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
