--- a/views/wiki/libsis.pug
+++ b/views/wiki/libsis.pug
@@ -13,25 +13,30 @@ block content
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
+      li <span class='icon-headphones'></span> Rama II - Arthur C. Clarke
+      li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
     <hr>
     h2 To Read
     h3 Non-Fiction
     ul
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
       li <span class='icon-tablet'></span> Godforsaken Sea - Derek Lundy
+      li <span class='icon-tablet'></span> North to the Night - Alvah Simon
     h3 Fiction - Sci-Fi
     ul
       li <span class='icon-tablet'></span> Field One - Simon Winstanley
-    h3 Fiction - Fantasy
+      li <span class='icon-tablet'></span> The Quantum Magician - Derek Künsken
+    H3 Fiction - Fantasy
     ul
       li <span class='icon-tablet'></span> Norse Mythology - Neil Gaiman
       li <span class='icon-book'></span> Mana Pool - L.J. McLean
       li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
-    h3 Graphic Novels
+    h3 Graphical
     ul
       li <span class='icon-tablet'></span> SAGA -   Brian K Vaughan , Fiona Staples
       li <span class='icon-tablet'></span> Giant Days -  John Allison, Lissa Treiman
       li <span class='icon-tablet'></span> Paper Girls -  Brian K. Vaughan, Cliff Chiang
+      li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
     h3 Goal >> 9/30
@@ -46,7 +51,7 @@ block content
       li <span class='icon-headphones'></span> On the Shoulders of Titans - Andrew Rowe
       li <span class='icon-headphones'></span> The Dark Tower VII: The Dark Tower - Stephen King
       li <span class='icon-headphones'></span> How to Stop Time - Matt Haig
-    h4 Graphic Novels
+    h4 Graphical
     ul
       li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
       li <span class='icon-book'></span> Homunculus - Joe Sparrow
@@ -68,13 +73,13 @@ block content
     h4 Fiction - Fantasy
     ul
       li <span class='icon-headphones'></span> Dungeon Calamity - Dakota Krout
-      li <span class='icon-book'></span> RWBY - Miwa Shirow
       li <span class='icon-headphones'></span> Forging Divinity - Andrew Rowe
       li <span class='icon-headphones'></span> Stealing Sorcery - Andrew Rowe
     h4 Fiction - General
     ul
       li <span class='icon-headphones'></span> A Man called Ove - Fredrik Backman
       li <span class='icon-headphones'></span> After It Happened 5 + 6 - Devon C. Ford
-    h4 Graphic Novels
+    h4 Graphical
     ul
       li <span class='icon-tablet'></span> Low: Vol. 1 -  Rick Remender, Greg Tocchini
+      li <span class='icon-book'></span> RWBY - Miwa Shirow
