Changed libsis to library and updated with latest reads

--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -13,7 +13,7 @@ block content
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
-      li <span class='icon-headphones'></span> Rama II - Arthur C. Clarke
+      li <span class='icon-headphones'></span> Consider Phlebas - Iain M. Banks
       li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
     <hr>
     h2 To Read
@@ -26,27 +26,31 @@ block content
     ul
       li <span class='icon-tablet'></span> Field One - Simon Winstanley
       li <span class='icon-tablet'></span> The Quantum Magician - Derek Künsken
-    H3 Fiction - Fantasy
+    h3 Fiction - Fantasy
     ul
       li <span class='icon-tablet'></span> Norse Mythology - Neil Gaiman
       li <span class='icon-book'></span> Mana Pool - L.J. McLean
       li <span class='icon-book'></span> Rotherweird - Andrew Caldecott
     h3 Graphical
     ul
-      li <span class='icon-tablet'></span> SAGA -   Brian K Vaughan , Fiona Staples
-      li <span class='icon-tablet'></span> Giant Days -  John Allison, Lissa Treiman
-      li <span class='icon-tablet'></span> Paper Girls -  Brian K. Vaughan, Cliff Chiang
+      li <span class='icon-tablet'></span> SAGA - Brian K Vaughan, Fiona Staples
+      li <span class='icon-tablet'></span> Giant Days - John Allison, Lissa Treiman
+      li <span class='icon-tablet'></span> Paper Girls - Brian K. Vaughan, Cliff Chiang
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 9/30
+    h3 Goal >> 13/30
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> Rama II - Arthur C. Clarke
+      li <span class='icon-headphones'></span> The Vexed Generation - Scott Meyer
+      li <span class='icon-headphones'></span> Outland - Dennis E. Taylor
       li <span class='icon-headphones'></span> Nine Fox Gambit - Yoon Ha Lee
       li <span class='icon-headphones'></span> Rendezvous with Rama - Arthur C. Clarke
       li <span class='icon-tablet'></span> Citidel 32: A Tale of the Aggrigate - Tom Merrit
     h4 Fiction - Fantasy
     ul
+      li <span class='icon-headphones'></span> Six Sacred Swords - Andrew Rowe
       li <span class='icon-tablet'></span> A Wizard of Earthsea - Ursula K. Le Guin
       li <span class='icon-headphones'></span> On the Shoulders of Titans - Andrew Rowe
       li <span class='icon-headphones'></span> The Dark Tower VII: The Dark Tower - Stephen King
