Changed url on about page to new reading list

--- a/views/about.pug
+++ b/views/about.pug
@@ -9,7 +9,7 @@ block content
     .index-list
       ul(style='list-style-type:none; text-align:center; padding:0;')
         li <a href='/wiki/goals'>Goals</a>
-        li <a href='/wiki/libsis'>Reading List</a>
+        li <a href='/wiki/library'>Reading List</a>
         li <a href='/wiki/bookmarks'>Bookmarks</a>
         li <a href='/wiki/straal'>Straal</a>
 
