--- a/views/wiki/goals.pug
+++ b/views/wiki/goals.pug
@@ -14,14 +14,13 @@ block content
       li Move out on my own
       li Finish thirty books
       li Reduce the amount of times I eat meat in a week to three
-      li Complete ten projects to a satisfactory level
+      li Complete eight projects to a satisfactory level
       li Learn to Sail
     h3 Monthly
     ul
       li Go out and take photos in a new location
-      li Play two video games from my childhood and write a short retrospective
+      li Write a summary in my Journal
     h3 Weekly
     ul
       li Hit my Exercise goal at least 4 times
-      li Work on a hardware project
-      li Write a summary in my Journal
+      li Work on a project
