Removed unneeded tags and changed git links

--- a/views/wiki/alchemist.pug
+++ b/views/wiki/alchemist.pug
@@ -2,17 +2,16 @@ extends ../templates/layout
 
 block content
   .content
-    div.wiki-header
+    .wiki-header
       img(src='/images/icons/wiki/alchemist.svg')
-    div.wiki-project-status
+    .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
           span VER&nbsp;&bullet;&nbsp;
           span 0.0.1
         li.w-p-s-item
-          span SRC&nbsp;&bullet;&nbsp;
-          a(href='https://github.com/drisc/retejo' class='outbound')
-              span GIT
+          a(href='https://github.com/drisc/alchemist' class='outbound')
+            span GIT
         li.w-p-s-item
           span STATUS&nbsp;&bullet;&nbsp;
           span InDev
