--- a/views/wiki/humes.pug
+++ b/views/wiki/humes.pug
@@ -2,19 +2,18 @@ extends ../templates/layout
 
 block content
   .content
-    div.wiki-header
+    .wiki-header
       img(src='/images/icons/wiki/humes.svg')
-    div.wiki-project-status
+    .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp; 
+          span VER&nbsp;&bullet;&nbsp;
           span 0.0.5
         li.w-p-s-item
-          span SRC&nbsp;&bullet;&nbsp;
-            a(href='https://github.com/drisc/humes' class='outbound')
-              span GIT
+          a(href='https://github.com/drisc/humes' class='outbound')
+            span GIT
         li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp; 
+          span STATUS&nbsp;&bullet;&nbsp;
           span InDev
     div
       h1 Humes
