--- a/views/wiki/velo.pug
+++ b/views/wiki/velo.pug
@@ -2,15 +2,14 @@ extends ../templates/layout
 
 block content
   .content
-    div.wiki-project-status
+    .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
           span VER&nbsp;&bullet;&nbsp;
           span 0.0.1
         li.w-p-s-item
-          span SRC&nbsp;&bullet;&nbsp;
-            a(href='https://github.com/drisc/velo' class='outbound')
-              span GIT
+          a(href='https://github.com/drisc/velo' class='outbound')
+            span GIT
         li.w-p-s-item
           span STATUS&nbsp;&bullet;&nbsp;
           span Design
