--- a/views/wiki/humes.pug
+++ b/views/wiki/humes.pug
@@ -34,7 +34,10 @@ block content
       p A small circuit board holding an ESP8266 with a DHT22, TLS2165, BMP180 and a raindrop sensor.&nbsp; All components housed in a small enclosure and placed outside, using a solar panel and on-board battery for power.
       h3 Indoor Environment Sensor
       p A smaller version of the OES without the light, pressure or rain sensors which measures room temp and includes an air particulate and smoke sensor.
-
-      h3(style='color: #DD5634') Planned
       h3 Power Switches
       p Small relay switches which can be controlled with either <a class='outbound' href='https://en.wikipedia.org/wiki/Power-line_communication'>PLC</a> or DMM. These can be added to existing devices such as lamps and fans or used as the base for building an entirely new piece of controllable equipment.
+      
+      h3(style='color: #DD5634') Planned
+      h3 Automated Activation
+      p Have power switches publish tags such as 'Lights' or 'Fan' and allow automatic activation based on time of day or output from another shard. For example the fan could be turned on via an IES when the temperature reaches a threshold.
+      
