--- a/views/wiki/procul.pug
+++ b/views/wiki/procul.pug
@@ -24,5 +24,5 @@ block content
     hr
     div
       h2 Current State
-      p No TUI yet, interaction is done via readline.
-      p Program is able to post to the timeline both publicly and unlisted. Fetching the timeline works but it returns JSON which need to be parsed and formatted.
+      p Program is able to post to the timeline both publicly and unlisted. Fetching the timeline will return the first 20 statuses on the home timeline.
+      p Next step is to impletment the TUI and open threads in a view, with reply, fav and boost support.
