--- a/views/wiki/procul.pug
+++ b/views/wiki/procul.pug
@@ -24,5 +24,13 @@ block content
     hr
     div
       h2 Current State
-      p Program is able to post to the timeline both publicly and unlisted. Fetching the timeline will return the first 20 statuses on the home timeline.
-      p Next step is to impletment the TUI and open threads in a view, with reply, fav and boost support.
+      p Program is able to post to the timeline both publicly and unlisted. Fetching the timeline returns the first 20 statuses on the home timeline.
+      p A basic TUI has been implemented with a public post creator and timeline view
+      p TODO: 
+      ul
+        li Open threads in a view, with reply, fav and boost support
+        li Better Themeing
+        li Strip Emoji
+        li Better Layout
+        li More timeline fetching
+        li Good colour scheme
