Added credit style for avatar and removed hover animation

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -358,18 +358,22 @@ li.w-p-s-item
   grid-row 1
   justify-self center
   align-self center
+  .credit
+    text-align center
+    a
+      color #666
   img
     display inline-block
-    border-radius 230px 48px 230px 48px
-    border 0px solid white
+    //border-radius 230px 48px 230px 48px
+    //border 0px solid white
     width 25vw
     margin 0 auto
     -webkit-filter grayscale(70%)
     filter grayscale(70%)
     transition .2s
   img:hover
-    border-radius 48px 230px 48px 230px
-    transition .2s
+    //border-radius 48px 230px 48px 230px
+    //transition .2s
   @media only screen and (max-width: 1000px)
     img
       width 50vw
