Added new avatar by rekka, added credit field to avatar

--- a/views/about.pug
+++ b/views/about.pug
@@ -2,7 +2,9 @@ extends templates/layout
 
 block content
   .avatar
-    img(src='/images/me/self_20180916.jpg' title='A Person, name of Driscoll')
+    img(src='/images/me/cory.transparent.sm.png' title='A Person, name of Driscoll. Art by Rekka Bellum(https://kokorobot.ca)')
+    .credit
+      a(href='https://kokorobot.ca') Art by Rekka Bellum
   .about
     h1 Cory Driscoll
     p(style='text-align: center') 24, drinks tea and presses keys.
