Modified the calendar info, no real need for the symbol

--- a/views/systems/calendar.pug
+++ b/views/systems/calendar.pug
@@ -5,7 +5,7 @@ block content
     div.wiki-header
     div
       h1 Afiur
-      .under-title 
+      .under-title
         span A Personal Epoch
     div
       ul.no-indent
@@ -14,7 +14,7 @@ block content
         li.no-style 1 Week • 10 days
         li.no-style 1 Day • 1 turn of the planet
     .cal
-      h1 ⊙
+      h1
         script.
           document.write(afiur.date());
 
@@ -23,13 +23,13 @@ block content
       p The main purpose of this system is be to provide a framework for planning and tracking of interest in working on projects. It's designed to work around way I live and want to spend my time.
 
       h2 Defining personal time
-      p A personal epoch starts on the day of birth. The symbol ⊙ or, on systems where the symbol won't render, the string {slf} is used as a prefix to the day total as well as the date.
+      p An Afiur epoch starts on the day of birth.
       p Personal time is subjective but for consistancy a day is judged as one turn of the planet with the date line running along the prime meridian.
 
       h4 Calculating the date mathamatically
-      p To find the current date for an epoch simply use the following equation: <code>⊙Days / 400</code>.
-      p The resulting decimal, when read left to right will display the current year and the month which is the first decimal place plus one. The last three digits can be diveded by <code>25</code> to show the current day within the month.
+      p To find the current date for an epoch simply use the following equation: <code>Days / 400</code>.
+      p The resulting decimal, when read left to right will display the current year and the month which is the first decimal place plus one. The last three digits can be divided by <code>25</code> to show the current day within the month.
       h4 Example
-      pre ⊙8727/400 = 21.8175
+      pre 8727/400 = 21.8175
       p or
       pre Year 21 • Month 9 • Day 7
