--- a/views/wiki/procul.pug
+++ b/views/wiki/procul.pug
@@ -3,7 +3,7 @@ extends ../templates/layout
 block content
   .content
     .wiki-header
-      img(src='')
+      img(src='/images/icons/wiki/vervatem.svg')
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
