--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -11,10 +11,8 @@ block content
     h2 Currently Reading
     ul
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
-      li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
-      li <span class='icon-headphones'></span> Consider Phlebas - Iain M. Banks
-      li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
+      li <span class='icon-headphones'></span> The Player of Games - Iain M. Banks
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -39,9 +37,13 @@ block content
       li <span class='icon-tablet'></span> Blame! - Tsutomu Nihei
     hr
     h2 Read in 2019
-    h3 Goal >> 13/30
+    h3 Goal >> 15/30
+    h4 Non-Fiction
+    ul
+      li <span class='icon-book'></span> Is That Bike Diesel, Mate? - Paul Carter
     h4 Fiction - Sci-Fi
     ul
+      li <span class='icon-headphones'></span> Consider Phlebas - Iain M. Banks
       li <span class='icon-headphones'></span> Rama II - Arthur C. Clarke
       li <span class='icon-headphones'></span> The Vexed Generation - Scott Meyer
       li <span class='icon-headphones'></span> Outland - Dennis E. Taylor
@@ -57,6 +59,7 @@ block content
       li <span class='icon-headphones'></span> How to Stop Time - Matt Haig
     h4 Graphical
     ul
+      li <span class='icon-tablet'></span> Soul Eater - Atsushi Ōkubo
       li <span class='icon-book'></span> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
       li <span class='icon-book'></span> Homunculus - Joe Sparrow
     h2 Read in 2018
