--- a/views/wiki/sargas.pug
+++ b/views/wiki/sargas.pug
@@ -17,4 +17,5 @@ block content
       .under-title
         span Portable Workstation
       p A small workstation based around a Raspberry Pi 3 B+, with a 7" screen housed in the SmartPi display case.
-      p The Smart Pi case is only temporary, a new case will be designed and printed which will allow for an on-board battery, speaker and better power management.
+      h2 Next Steps
+      p The Smart Pi case is only temporary, a new case is being designed which will allow for an on-board battery, speaker, better power management and solar charging. It will also incorporate a Pi 4B and quiet fan.
