--- a/views/wiki/library.pug
+++ b/views/wiki/library.pug
@@ -13,6 +13,7 @@ block content
       li <span class='icon-tablet'></span> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
       li <span class='icon-headphones'></span> Snow Crash - Neal Stephenson
       li <span class='icon-tablet'></span> Superintelligence - Nick Bostrum
+      li <span class='icon-headphones'></span> Awaken Online: Dominion - Travis Bagwell
     <hr>
     h2 To Read
     h3 Non-Fiction
