Rewrote Humes information, added feature status tag styles

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -291,6 +291,19 @@ li.w-p-s-item
   margin 0
   text-align center
 
+.feature-testing
+  background-color #FD2
+  color var(--bg)
+  padding 2px
+  font-size 15px
+  font-family BattalionMono
+
+.feature-planned
+  background-color #DD5634
+  color var(--bg)
+  padding 2px
+  font-size 15px
+  font-family BattalionMono  
 
 /*
   Blog · Post Viewer
