Changed project status bar and added <hr>

--- a/views/wiki/alchemist.pug
+++ b/views/wiki/alchemist.pug
@@ -7,17 +7,15 @@ block content
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp;
+          span Version&nbsp;&bullet;&nbsp;
           span 0.0.1
         li.w-p-s-item
           a(href='https://github.com/drisc/alchemist' class='outbound')
-            span GIT
-        li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp;
-          span InDev
+            span Source
     div
       h1 Alchemist
       .under-title Transmute time and code into a personal tome.
+    hr
     div
       p The Alchemist is a static wiki generator, designed to read data from a collection of flat file databases and produce a folder filled with HTML documents. It watches the library folder for updates and builds itself once there has been no new activity after 10 minutes.
 
