--- a/views/wiki/procul.pug
+++ b/views/wiki/procul.pug
@@ -7,14 +7,11 @@ block content
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp;
+          span Version&nbsp;&bullet;&nbsp;
           span 0.2.0
         li.w-p-s-item
           a(href='https://github.com/drisc/procul' class='outbound')
-            span GIT
-        li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp;
-          span InDev
+            span Source
     div
       h1 Procul
       .under-title
@@ -22,6 +19,7 @@ block content
       p Procul is an idea I've had floating around in my head for a while now. A small light CLI Mastodon client, capable of displaying links to photos and rendering the alt-text that is included with pictures for accessability, have a seperate column for favs/boost/replies and be nice to look at.
 
     hr
+    
     div
       h2 Current State
       p Program is able to post to the timeline both publicly and unlisted. Fetching the timeline returns the first 20 statuses on the home timeline.
