--- a/views/wiki/sargas.pug
+++ b/views/wiki/sargas.pug
@@ -7,15 +7,13 @@ block content
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp; 
+          span Version&nbsp;&bullet;&nbsp; 
           span 0.0.1
-        li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp; 
-          span InDev
     div
       h1 Sargas
       .under-title
         span Portable Workstation
+      hr
       p A small workstation based around a Raspberry Pi 3 B+, with a 7" screen housed in the SmartPi display case.
       h2 Next Steps
       p The Smart Pi case is only temporary, a new case is being designed which will allow for an on-board battery, speaker, better power management and solar charging. It will also incorporate a Pi 4B and quiet fan.
