--- a/views/wiki/velo.pug
+++ b/views/wiki/velo.pug
@@ -5,19 +5,17 @@ block content
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp;
+          span Version&nbsp;&bullet;&nbsp;
           span 0.0.1
         li.w-p-s-item
           a(href='https://github.com/drisc/velo' class='outbound')
-            span GIT
-        li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp;
-          span Design
+            span Source
     div
       h1 Velo
       .under-title
         span Bike Computer &amp; Tracker
       span Velo is a small screen with a built in GPS chip, powered by an ESP-12F.
+    hr
     div
       h2 Hardware
       h3 Ai-Thinker ESP-12F
