--- a/views/wiki/retejo.pug
+++ b/views/wiki/retejo.pug
@@ -7,27 +7,23 @@ block content
     .wiki-project-status
       ul.w-p-s-list
         li.w-p-s-item
-          span VER&nbsp;&bullet;&nbsp;
+          span Version&nbsp;&bullet;&nbsp;
           span 1.0.0
         li.w-p-s-item
           a(href='https://github.com/drisc/retejo' class='outbound')
-            span GIT
-        li.w-p-s-item
-          span STATUS&nbsp;&bullet;&nbsp;
-          span InDev
+            span Source
     div
       h1 Retejo
+      .under-title
+        span NodeJS powered website
+    hr
     div
       p Retejo is a collection of media, writings and projects that I would like to share with the world. A personal expression platform.
-      p The site is currently hosted using node.js and static webpages written in the Pug template language.
-    div
-      h2 The Plan
-      p Eventually to be a lightweight application which will serve webpages that pull information from flat databases. While it's' currently written in Node.JS and Pug the final 1.0 version will simply be a router and a renderer which points to template files that watch for new files and build their content when there is an update.
-
+      p The site renders pages on load using Express and files written in the Pug template language.
     div
       h2 Externals
-      p This site uses and builds upon several external projects, below is a list of things being used along with their creators. Go check them out!
+      p This site uses and several external projects, below is a list of things being used along with their creators. Go check them out!
 
-      ul(style='list-style:none; padding:0;')
-        li Battalion Mono - <a class='outbound' href='https://craze.co.uk'>Rutherford Craze</a>
-        li Tablatal - <a class='outbound' href='https://wiki.xxiivv.com/'>Devine Lu Linvega</a>
+      ul
+        li Battalion Mono - <a class='outbound' href='https://craze.co.uk/battalion.html'>Rutherford Craze</a>
+        li SpaceGrotesk - <a class='outbound' href='https://fonts.floriankarsten.com/space-grotesk'>Florian Karsten</a>
