--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,8 +4,8 @@
   --color-1 rgba(0,0,0,0.4)
   --color-2 #EEE
   --color-3 #212121
-  --color-4 #FFC705
-  --color-5 #FF9933
+  --color-4 #FD2
+  --color-5 #DD5634
   --grey #5D5D5D
   --soften 5px
 
@@ -44,6 +44,8 @@ h1, h2, h3, h4, h5, h6
   font-family BattalionMono
   line-height 1em
   padding-bottom 0
+h3, h4, h5, h6
+  margin-bottom 2px
 h1.responsive-text
   font-size 5vh
 a:link, a:visited, a:active
@@ -54,8 +56,9 @@ a:hover
   transition .2s
 // Outbound Links
 a.outbound
-  padding 0 10px 0 10px
-  background-color var(--color-1)
+  padding 0 5px 0 5px
+  //border-color var(--color-5)
+  border-bottom 1px solid var(--grey)
 button
   width 50px
   height 30px
@@ -69,6 +72,10 @@ button
   margin-top -18px
   font-size 85%
   color var(--grey)
+ul
+  margin-top -10px
+  li
+    margin-left 12px
 ul.no-indent
   margin-left -40px
 li.no-style
@@ -130,6 +137,7 @@ li.no-style
   list-style-type none
   padding 0
   li
+    margin 0
     float left
 .nav-item
   padding-right 10px
@@ -398,7 +406,7 @@ li.w-p-s-item
 */
 footer
   display grid
-  grid-template-columns 100px auto 100px
+  grid-template-columns 120px auto 120px
   grid-template-rows 50px
   width 100%
   height 50px
